# controller/service.go
@@ -2,6 +2,8 @@ package controller
 
 import (
 	"fmt"
+	"strings"
+
 	"github.com/gin-gonic/gin"
 	"github.com/pkg/errors"
 	"github.com/weiyouwozuiku/Gateway/dao"
@@ -10,7 +12,6 @@ import (
 	"github.com/weiyouwozuiku/Gateway/public"
 	"github.com/weiyouwozuiku/Gateway/server"
 	"gorm.io/gorm"
-	"strings"
 )
 
 type ServiceController struct{}
@@ -19,11 +20,10 @@ func ServiceRegister(group *gin.RouterGroup) {
 	service := ServiceController{}
 	group.GET("/service_list", service.ServiceList)
 	group.GET("/service_delete", service.ServiceDelete)
-	group.GET("/service_detail", service.ServiceDetail)
-	group.GET("/service_stat", service.ServiceStat)
 	group.POST("/service_add_http", service.ServiceAddHTTP)
 	group.POST("/service_update_http", service.ServiceUpdateHTTP)
-
+	group.GET("/service_detail", service.ServiceDetail)
+	group.GET("/service_stat", service.ServiceStat)
 	group.POST("/service_add_tcp", service.ServiceAddTcp)
 	group.POST("/service_update_tcp", service.ServiceUpdateTcp)
 	group.POST("/service_add_grpc", service.ServiceAddGrpc)
@@ -172,7 +172,8 @@ func (service *ServiceController) ServiceDelete(c *gin.Context) {
 //	@Router			/service/service_add_http [post]
 func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 	params := &dto.ServiceAddHTTPInput{}
-	if err := params.BindValidParam(c); err != nil {
+	var err error
+	if err = params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
@@ -181,34 +182,35 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		middleware.ResponseError(c, 2004, errors.New("IP列表与权重列表数量不一致"))
 		return
 	}
-
-	tx, err := server.GetGORMPool(server.DBDefault)
+	var tx *gorm.DB
+	tx, err = server.GetGORMPool(server.DBDefault)
 	if err != nil {
 		middleware.ResponseError(c, 2001, err)
 		return
 	}
 	tx = tx.Begin()
+	defer func() {
+		if err != nil {
+			tx.Rollback()
+		}
+	}()
 	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
 	if _, err = serviceInfo.Find(c, tx, serviceInfo); err == nil {
-		tx.Rollback()
 		middleware.ResponseError(c, 2002, errors.New("服务已存在"))
 		return
 	} else {
 		if err != gorm.ErrRecordNotFound {
-			tx.Rollback()
 			middleware.ResponseError(c, 2002, errors.New("服务名查询失败"))
 			return
 		}
 	}
 
 	httpUrl := &dao.HttpRule{RuleType: params.RuleType, Rule: params.Rule}
-	if _, err := httpUrl.Find(c, tx, httpUrl); err == nil {
-		tx.Rollback()
+	if _, err = httpUrl.Find(c, tx, httpUrl); err == nil {
 		middleware.ResponseError(c, 2003, errors.New("服务接入前缀或域名已存在"))
 		return
 	} else {
 		if err != gorm.ErrRecordNotFound {
-			tx.Rollback()
 			middleware.ResponseError(c, 2003, errors.New("服务接入前缀或域名查询失败"))
 			return
 		}
@@ -218,8 +220,7 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		ServiceName: params.ServiceName,
 		ServiceDesc: params.ServiceDesc,
 	}
-	if err := serviceModel.Save(c, tx); err != nil {
-		tx.Rollback()
+	if err = serviceModel.Save(c, tx); err != nil {
 		middleware.ResponseError(c, 2005, err)
 		return
 	}
@@ -234,8 +235,7 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		UrlRewrite:     params.UrlRewrite,
 		HeaderTransfor: params.HeaderTransfor,
 	}
-	if err := httpRule.Save(c, tx); err != nil {
-		tx.Rollback()
+	if err = httpRule.Save(c, tx); err != nil {
 		middleware.ResponseError(c, 2006, err)
 		return
 	}
@@ -248,8 +248,7 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		ClientIPFlowLimit: params.ClientipFlowLimit,
 		ServiceFlowLimit:  params.ServiceFlowLimit,
 	}
-	if err := accessControl.Save(c, tx); err != nil {
-		tx.Rollback()
+	if err = accessControl.Save(c, tx); err != nil {
 		middleware.ResponseError(c, 2007, err)
 		return
 	}
@@ -264,6 +263,97 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 		UpstreamIdleTimeout:    params.UpstreamIdleTimeout,
 		UpstreamMaxIdle:        params.UpstreamMaxIdle,
 	}
+	if err = loadbalance.Save(c, tx); err != nil {
+		middleware.ResponseError(c, 2008, err)
+		return
+	}
+	tx.Commit()
+	middleware.ResponseSuccess(c, "")
+}
+
+// ServiceUpdateHTTP godoc
+//
+//	@Summary		修改HTTP服务
+//	@Description	修改HTTP服务
+//	@Tags			服务管理
+//	@ID				/service/service_update_http
+//	@Accept			json
+//	@Produce		json
+//	@Param			body	body		dto.ServiceUpdateHTTPInput			true	"body"
+//	@Success		200		{object}	middleware.Response{data=string}	"success"
+//	@Router			/service/service_update_http [post]
+func (service *ServiceController) ServiceUpdateHTTP(c *gin.Context) {
+	params := &dto.ServiceUpdateHTTPInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	if len(strings.Split(params.IpList, ",")) != len(strings.Split(params.WeightList, ",")) {
+		middleware.ResponseError(c, 2001, errors.New("IP列表与权重列表数量不一致"))
+		return
+	}
+
+	tx, err := server.GetGORMPool(server.DBDefault)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	tx = tx.Begin()
+	serviceInfo := &dao.ServiceInfo{ServiceName: params.ServiceName}
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2003, errors.New("服务不存在"))
+		return
+	}
+	serviceDetail, err := serviceInfo.ServiceDetail(c, tx, serviceInfo)
+	if err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2004, errors.New("服务不存在"))
+		return
+	}
+
+	info := serviceDetail.Info
+	info.ServiceDesc = params.ServiceDesc
+	if err := info.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2005, err)
+		return
+	}
+
+	httpRule := serviceDetail.HTTPRule
+	httpRule.NeedHttps = params.NeedHttps
+	httpRule.NeedStripUri = params.NeedStripUri
+	httpRule.NeedWebsocket = params.NeedWebsocket
+	httpRule.UrlRewrite = params.UrlRewrite
+	httpRule.HeaderTransfor = params.HeaderTransfor
+	if err := httpRule.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2006, err)
+		return
+	}
+
+	accessControl := serviceDetail.AccessControl
+	accessControl.OpenAuth = params.OpenAuth
+	accessControl.BlackList = params.BlackList
+	accessControl.WhiteList = params.WhiteList
+	accessControl.ClientIPFlowLimit = params.ClientipFlowLimit
+	accessControl.ServiceFlowLimit = params.ServiceFlowLimit
+	if err := accessControl.Save(c, tx); err != nil {
+		tx.Rollback()
+		middleware.ResponseError(c, 2007, err)
+		return
+	}
+
+	loadbalance := serviceDetail.LoadBalance
+	loadbalance.RoundType = params.RoundType
+	loadbalance.IpList = params.IpList
+	loadbalance.WeightList = params.WeightList
+	loadbalance.UpstreamConnectTimeout = params.UpstreamConnectTimeout
+	loadbalance.UpstreamHeaderTimeout = params.UpstreamHeaderTimeout
+	loadbalance.UpstreamIdleTimeout = params.UpstreamIdleTimeout
+	loadbalance.UpstreamMaxIdle = params.UpstreamMaxIdle
 	if err := loadbalance.Save(c, tx); err != nil {
 		tx.Rollback()
 		middleware.ResponseError(c, 2008, err)
@@ -271,4 +361,43 @@ func (service *ServiceController) ServiceAddHTTP(c *gin.Context) {
 	}
 	tx.Commit()
 	middleware.ResponseSuccess(c, "")
+}
+
+// ServiceDetail godoc
+//
+//	@Summary		服务详情
+//	@Description	服务详情
+//	@Tags			服务管理
+//	@ID				/service/service_detail
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	query		string										true	"服务ID"
+//	@Success		200	{object}	middleware.Response{data=dao.ServiceDetail}	"success"
+//	@Router			/service/service_detail [get]
+func (service *ServiceController) ServiceDetail(c *gin.Context) {
+	params := &dto.ServiceDetailInput{}
+	if err := params.BindValidParam(c); err != nil {
+		middleware.ResponseError(c, 2000, err)
+		return
+	}
+
+	tx, err := server.GetGORMPool(server.DBDefault)
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+
+	//读取基本信息
+	serviceInfo := &dao.ServiceInfo{ID: params.ID}
+	serviceInfo, err = serviceInfo.Find(c, tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	serviceDetail, err := serviceInfo.ServiceDetail(c, tx, serviceInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	middleware.ResponseSuccess(c, serviceDetail)
 }
